--- a/MyAI/MyAI.csproj
+++ b/MyAI/MyAI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenAI" Version="2.2.0" />
+    <ProjectReference Include="..\AI\AI.csproj" />
   </ItemGroup>
 
 </Project>
