--- a/MyAI/appsettings.Development.json
+++ b/MyAI/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "GROQ_API_KEY": "your-groq-api-key-here"
 }
